--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -57,3 +57,4 @@ jobs:
           CLUSTER: dev-gcp
           RESOURCE: .nais/nais.yaml
           IMAGE: ${{ needs.build-and-push.outputs.image }}
+          VARS: .nais/dev.yaml
