--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "NODE_ENV=production node dist/index.js",
     "build": "tsc -p tsconfig.json",
-    "test": "vitest --run"
+    "test": "vitest --run",
+    "postinstall": "husky"
   },
   "packageManager": "yarn@4.4.1",
   "dependencies": {
