--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -1,7 +1,11 @@
 ingresses:
   - "https://kelvin.ansatt.dev.nav.no"
 env:
-  - OPPGAVESTYRING_FRONTEND_SCOPE: api://dev-gcp.aap.oppgavestyring-frontend/.default
-  - POSTMOTTAK_SCOPE: api://dev-gcp.aap.postmottak/.default
-  - PRODUKSJONSSTYRING_SCOPE: api://dev-gcp.aap.produksjonsstyring/.default
-  - SAKSBEHANDLNIG_SCOPE: api://dev-gcp.aap.saksbehandling/.default
+  - name: OPPGAVESTYRING_FRONTEND_SCOPE
+    value: api://dev-gcp.aap.oppgavestyring-frontend/.default
+  - name: POSTMOTTAK_SCOPE
+    value: api://dev-gcp.aap.postmottak/.default
+  - name: PRODUKSJONSSTYRING_SCOPE
+    value: api://dev-gcp.aap.produksjonsstyring/.default
+  - name: SAKSBEHANDLNIG_SCOPE
+    value: api://dev-gcp.aap.saksbehandling/.default
