--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aap-kelvin-reverse-proxy",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "NODE_ENV=localhost PORT=9000 node dist/index.js",
+    "dev": "NODE_ENV=localhost PORT=9000 node dist/index.js | pino-pretty",
     "build": "tsc -p tsconfig.json",
     "test": "vitest --run",
     "postinstall": "husky"
@@ -22,6 +22,7 @@
     "eslint": "^9.19.0",
     "globals": "^15.15.0",
     "husky": "^9.1.7",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
