--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -36,8 +36,9 @@ spec:
       enabled: true
       autoLogin: true
   observability:
-    tracing:
+    autoInstrumentation:
       enabled: true
+      runtime: nodejs
   ingresses:
   {{#each ingresses as |url|}}
     - {{url}}
